--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <div class="header">Cloning A Repository</div>
     
-    <div class="header">Resolving Repository Conflicts</div>
+    <div class="header">Resolviendo conflictos del Repositorio</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
