--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <h1>Git Example Topics</h1>
     
-    <div class="header">Cloning A Repository</div>
+    <div class="header">Clonando un Repositorio</div>
     
     <div class="header">Resolviendo conflictos del Repositorio</div>
 
