--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <body>
     <h1>Git Example Topics</h1>
     
-    <div class="header">Clonando un Repositorio</div>
+    <div class="header">Cambiando un Repositorio</div>
     
-    <div class="header">Resolviendo conflictos del Repositorio</div>
+    <div class="header">Resolviendo conflictos del Repositoriotoootlo</div>
 
     <div class="header">Haciendo un experimento</div>
 
