--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="header">Cambiando un Repositorio</div>
 
     
-    <div class="header">Resolviendo conflictos del Repositoriotoootlo</div>
+    <div class="header">Resolviendo conflictos del Receptaculo.</div>
 
     <div class="header">Haciendo un experimento</div>
 
